crates/oomtop-tui/tests/snapshots/render__home_80_16.snap
---
source: crates/oomtop-tui/tests/render.rs
expression: styled(&buf)
---
  E0[|||      21.5%]  E3[          2.0%]  P6[||||||   42.4%]  P9[||       11.8%]
.aaabcccddddddaaaaab.aaabddddddddddaaaab.aaabccccccdddaaaaab.aaabccdddddddaaaaab
  E1[||       16.0%]  E4[          1.3%]  P7[|||||||||78.0%]
.aaabccdddddddaaaaab.aaabddddddddddaaaab.aaabeeeeeeeeeaaaaab
  E2[|         6.7%]  E5[          0.7%]  P8[|||||||||93.1%]
.aaabcdddddddddaaaab.aaabddddddddddaaaab.aaabfffffffffaaaaab
 Mem[||||||||##############*20.1G/24.0G]  Tasks: 761, 3412 thr; 3 running
.aaab........bbbbbbbbbbbbbbdaaaaaaaaaaab..aaaaaaabbbaabbbbaaaaaabaaaaaaaa
 Swp[|||||||||||||||||||||||||6.1G/7.0G]  Load average: 3.20 2.74 2.41
.aaabeeeeeeeeeeeeeeeeeeeeeeeeeaaaaaaaaab..aaaaaaaaaaaaaabbbb
 GPU[||||||||||||||||||||         58.0%]  Uptime: 58 days, 11:23:04
.aaabccccccccccccccccccccdddddddddaaaaab..aaaaaaaabbbbbbbbbbbbbbbbb
 Tight on memory — 223 MiB headroom. sd-server · qwen-image-studio holds 9.9
.ggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
 GiB; 3 idle groups could free 3.0 GiB.  [r]
.ggggggggggggggggggggggggggggggggggggggbbbbb
 MEM |apps 5.6G #gpu 9.9G *cmp 1.6G =wired 3.0G .cache 3.8G free 100M avail 3.1G
aaaa..aaaaa.....baaaa.....daaaa.....haaaaaa.....aaaaaaa.....aaaaa.....aaaaaa
 SWAP 6.1G / 7.0G  ▲ 87% full  ⣀⣤⣤⣶⣶⣿  ▲ +360M/min   headroom 223M
aaaaaaiiiiiiiiiiieeeeeeeeeeee........eeeeeeeeeeeee
 oomtop  [1 Home] 2 3 4 5 6             ▲ Pressure  72% speed  ▲ warm  bat 29%
bbbbbbbb.bbbbbbbb.b.b.b.b.b.............eeeeeeeeee..eeeeeeeee..eeeeee
─ Your things ──────────────────────────────────────────────────────────────────
ddaaaaaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
 sd-server · qwen-image-studio  9.9G  generating 3/6    Claude Code ×4  1.4G

 ▲ Leftovers: chrome-headless-shell from Claude Code · 7c11 450M · r reclaims
eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
─ Ranked ──────────────────────────────────────── / filter · : command · i why ─
ddaaaaaaaddddddddddddddddddddddddddddddddddddddddaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 ▸ sd-server · qwen-image… generating 3/6     9.9G  ⣰⣦⣰⣄⣷⣼    85%
jjjkkkkkkkkkkkkkkkkkkkkkkklllllllllllllllllllllllllllllllllllllllmmmmmmmmmmmmmmm
   KotlinCompileDaemon     idle 6h35m         3.0G  ⣶⣄⣦⣸⣦⣷     0%  ● reclaimable
bbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa........................ccccccccccccccc
   GradleDaemon 9.8        idle 3h40m         2.9G  ⣄⣦⣸⣦⣷⣤     0%  ● reclaimable
bbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa........................ccccccccccccccc
   Google Chrome (14)                         2.9G  ⣦⣰⣄⣷⣼⣦     6%
bbb.......................aaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude desktop VM                         ≥1.5G  ⣰⣄⣷⣼⣦⣼     2%  sandbox
bbbiiiiiiiiiiiiiiiiiiiiiiiaaaaaaaaaaaaaaa........................iiiiiiiiiiiiiii
   ChatGPT / Codex (6)                        1.0G  ⣦⣰⣤⣷⣄⣷     2%
bbb.......................aaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude Code · d4e5 (2)                     383M  ⣄⣷⣄⣶⣼⣦     0%
bbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   chrome-headless-shell   ▲ orphan           450M  ⣄⣶⣼⣦⣸⣦     0%  ● reclaimable
bbb.......................eeeeeeeeeeeeeee........................ccccccccccccccc
   Claude                                     420M  ⣰⣤⣷⣄⣶⣼     1%
bbb.......................aaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   clang                                      120M  ⣄⣦⣸⣦⣷⣤    30%
bbb.......................aaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude Code · a90b (2)                     372M  ⣰⣦⣰⣄⣷⣼     0%
bbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude Code · 3f2a (2)                     350M  ⣦⣰⣄⣷⣼⣦     4%
bbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   WindowServer                               410M  ⣦⣸⣦⣰⣦⣷     6%  protected
bbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   … 2 more
aaaaaaaaaaa
F1Help F2Setup F3Search F4Filter F5Tree F6SortBy F7Why F8Reclaim F9Stop F10Quit
..lllll..llllll..lllllll..lllllll..lllll..lllllll..llll..llllllll..lllll...lllll
--- legend
a = dim
b = bold
c = fg:Green
d = fg:DarkGray
e = fg:Yellow
f = fg:Red bold
g = fg:Yellow bold
h = dim italic
i = italic
j = bold reverse
k = bold italic reverse
l = reverse
m = dim reverse
